# makesuper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c
.devcontainer/: setup.sh
cmake/: unknown-unknown-cosmo@cosmocc.cmake
src/: main.cpp
test/superhello/: superapp.txt
test/superhello/LINUX-X86_64/: hello.sh  message.txt
test/superhello/WINDOWS-X86_64/: hello.cmd  message.txt
